--- a/Visual/ciyun.html
+++ b/Visual/ciyun.html
@@ -8,11 +8,11 @@
 
 </head>
 <body >
-    <div id="eb865418bea44e0b8272a95beb92e82a" class="chart-container" style="width:100%; height:550px; "></div>
+    <div id="a483ba4ba12743a0be3282ee2950f461" class="chart-container" style="width:100%; height:550px; "></div>
     <script>
-        var chart_eb865418bea44e0b8272a95beb92e82a = echarts.init(
-            document.getElementById('eb865418bea44e0b8272a95beb92e82a'), 'dark', {renderer: 'canvas'});
-        var option_eb865418bea44e0b8272a95beb92e82a = {
+        var chart_a483ba4ba12743a0be3282ee2950f461 = echarts.init(
+            document.getElementById('a483ba4ba12743a0be3282ee2950f461'), 'dark', {renderer: 'canvas'});
+        var option_a483ba4ba12743a0be3282ee2950f461 = {
     "backgroundColor": "transparent",
     "animation": true,
     "animationThreshold": 2000,
@@ -44,217 +44,223 @@
                     "name": "\u56db\u5ddd\u7701",
                     "value": 370,
                     "textStyle": {
-                        "color": "rgb(157,134,158)"
+                        "color": "rgb(35,98,109)"
                     }
                 },
                 {
                     "name": "\u6e56\u5317\u7701",
                     "value": 325,
                     "textStyle": {
-                        "color": "rgb(129,93,115)"
+                        "color": "rgb(111,32,22)"
                     }
                 },
                 {
                     "name": "\u6d59\u6c5f\u7701",
                     "value": 395,
                     "textStyle": {
-                        "color": "rgb(160,46,2)"
+                        "color": "rgb(9,33,5)"
                     }
                 },
                 {
                     "name": "\u5185\u8499\u53e4\u81ea\u6cbb\u533a",
                     "value": 298,
                     "textStyle": {
-                        "color": "rgb(104,43,86)"
+                        "color": "rgb(26,9,123)"
                     }
                 },
                 {
                     "name": "\u6cb3\u5357\u7701",
                     "value": 478,
                     "textStyle": {
-                        "color": "rgb(10,43,133)"
+                        "color": "rgb(67,128,125)"
                     }
                 },
                 {
                     "name": "\u5e7f\u4e1c\u7701",
-                    "value": 358,
+                    "value": 357,
                     "textStyle": {
-                        "color": "rgb(109,106,91)"
+                        "color": "rgb(145,89,125)"
                     }
                 },
                 {
                     "name": "\u6c5f\u897f\u7701",
-                    "value": 611,
+                    "value": 610,
                     "textStyle": {
-                        "color": "rgb(27,66,79)"
+                        "color": "rgb(112,152,24)"
                     }
                 },
                 {
                     "name": "\u4e0a\u6d77\u5e02",
                     "value": 328,
                     "textStyle": {
-                        "color": "rgb(37,22,72)"
+                        "color": "rgb(94,107,106)"
                     }
                 },
                 {
                     "name": "\u5e7f\u897f\u58ee\u65cf\u81ea\u6cbb\u533a",
                     "value": 321,
                     "textStyle": {
-                        "color": "rgb(145,96,119)"
+                        "color": "rgb(90,144,44)"
                     }
                 },
                 {
                     "name": "\u9655\u897f\u7701",
                     "value": 310,
                     "textStyle": {
-                        "color": "rgb(145,47,139)"
+                        "color": "rgb(55,50,70)"
                     }
                 },
                 {
                     "name": "\u5c71\u897f\u7701",
                     "value": 287,
                     "textStyle": {
-                        "color": "rgb(152,71,149)"
+                        "color": "rgb(135,13,22)"
                     }
                 },
                 {
                     "name": "\u4e91\u5357\u7701",
                     "value": 321,
                     "textStyle": {
-                        "color": "rgb(14,130,58)"
+                        "color": "rgb(130,152,98)"
                     }
                 },
                 {
                     "name": "\u5409\u6797\u7701",
                     "value": 313,
                     "textStyle": {
-                        "color": "rgb(84,42,26)"
+                        "color": "rgb(34,152,80)"
                     }
                 },
                 {
                     "name": "\u9ed1\u9f99\u6c5f\u7701",
                     "value": 352,
                     "textStyle": {
-                        "color": "rgb(63,66,156)"
+                        "color": "rgb(155,45,87)"
                     }
                 },
                 {
                     "name": "\u5c71\u4e1c\u7701",
-                    "value": 382,
+                    "value": 383,
                     "textStyle": {
-                        "color": "rgb(128,81,123)"
+                        "color": "rgb(61,37,37)"
                     }
                 },
                 {
                     "name": "\u6c5f\u82cf\u7701",
                     "value": 482,
                     "textStyle": {
-                        "color": "rgb(6,113,138)"
+                        "color": "rgb(139,47,65)"
                     }
                 },
                 {
                     "name": "\u5b89\u5fbd\u7701",
                     "value": 445,
                     "textStyle": {
-                        "color": "rgb(69,67,148)"
+                        "color": "rgb(98,156,36)"
                     }
                 },
                 {
                     "name": "\u6d77\u5357\u7701",
                     "value": 296,
                     "textStyle": {
-                        "color": "rgb(114,155,127)"
+                        "color": "rgb(18,32,146)"
                     }
                 },
                 {
                     "name": "\u8d35\u5dde\u7701",
                     "value": 21,
                     "textStyle": {
-                        "color": "rgb(91,15,34)"
+                        "color": "rgb(111,50,23)"
                     }
                 },
                 {
                     "name": "\u8fbd\u5b81\u7701",
                     "value": 379,
                     "textStyle": {
-                        "color": "rgb(83,75,86)"
+                        "color": "rgb(35,42,112)"
                     }
                 },
                 {
                     "name": "\u5b81\u590f\u56de\u65cf\u81ea\u6cbb\u533a",
                     "value": 315,
                     "textStyle": {
-                        "color": "rgb(20,152,61)"
+                        "color": "rgb(74,144,65)"
                     }
                 },
                 {
                     "name": "\u6cb3\u5317\u7701",
                     "value": 349,
                     "textStyle": {
-                        "color": "rgb(85,142,48)"
+                        "color": "rgb(144,116,141)"
                     }
                 },
                 {
                     "name": "\u6e56\u5357\u7701",
                     "value": 349,
                     "textStyle": {
-                        "color": "rgb(57,58,20)"
+                        "color": "rgb(110,113,12)"
                     }
                 },
                 {
                     "name": "\u798f\u5efa\u7701",
                     "value": 314,
                     "textStyle": {
-                        "color": "rgb(12,57,135)"
+                        "color": "rgb(65,44,119)"
                     }
                 },
                 {
                     "name": "\u5929\u6d25\u5e02",
                     "value": 514,
                     "textStyle": {
-                        "color": "rgb(158,113,22)"
+                        "color": "rgb(141,133,65)"
                     }
                 },
                 {
                     "name": "\u5317\u4eac\u5e02",
                     "value": 321,
                     "textStyle": {
-                        "color": "rgb(66,127,2)"
+                        "color": "rgb(148,60,114)"
                     }
                 },
                 {
                     "name": "\u91cd\u5e86\u5e02",
                     "value": 311,
                     "textStyle": {
-                        "color": "rgb(139,151,8)"
+                        "color": "rgb(108,50,40)"
                     }
                 },
                 {
                     "name": "\u897f\u85cf\u81ea\u6cbb\u533a",
                     "value": 142,
                     "textStyle": {
-                        "color": "rgb(35,150,133)"
+                        "color": "rgb(79,159,83)"
                     }
                 },
                 {
                     "name": "\u65b0\u7586\u7ef4\u543e\u5c14\u81ea\u6cbb\u533a",
                     "value": 59,
                     "textStyle": {
-                        "color": "rgb(1,61,25)"
+                        "color": "rgb(111,136,57)"
                     }
                 },
                 {
                     "name": "\u9752\u6d77\u7701",
                     "value": 100,
                     "textStyle": {
-                        "color": "rgb(86,48,22)"
+                        "color": "rgb(43,123,28)"
                     }
                 },
                 {
                     "name": "\u7518\u8083\u7701",
                     "value": 154,
                     "textStyle": {
-                        "color": "rgb(154,59,19)"
+                        "color": "rgb(84,16,57)"
+                    }
+                },
+                {
+                    "value": 3,
+                    "textStyle": {
+                        "color": "rgb(109,149,152)"
                     }
                 }
             ],
@@ -332,9 +338,9 @@
         }
     ]
 };
-        chart_eb865418bea44e0b8272a95beb92e82a.setOption(option_eb865418bea44e0b8272a95beb92e82a);
+        chart_a483ba4ba12743a0be3282ee2950f461.setOption(option_a483ba4ba12743a0be3282ee2950f461);
             window.addEventListener('resize', function(){
-                chart_eb865418bea44e0b8272a95beb92e82a.resize();
+                chart_a483ba4ba12743a0be3282ee2950f461.resize();
             })
     </script>
 </body>
