--- a/Visual/shiduan.html
+++ b/Visual/shiduan.html
@@ -7,11 +7,11 @@
 
 </head>
 <body >
-    <div id="3cdccd1530014fb88d17a47aa0f0a8c1" class="chart-container" style="width:100%; height:500px; "></div>
+    <div id="69fe6bbff9ed440fb23b0cf2271dea21" class="chart-container" style="width:100%; height:500px; "></div>
     <script>
-        var chart_3cdccd1530014fb88d17a47aa0f0a8c1 = echarts.init(
-            document.getElementById('3cdccd1530014fb88d17a47aa0f0a8c1'), 'white', {renderer: 'canvas'});
-        var option_3cdccd1530014fb88d17a47aa0f0a8c1 = {
+        var chart_69fe6bbff9ed440fb23b0cf2271dea21 = echarts.init(
+            document.getElementById('69fe6bbff9ed440fb23b0cf2271dea21'), 'white', {renderer: 'canvas'});
+        var option_69fe6bbff9ed440fb23b0cf2271dea21 = {
     "baseOption": {
         "series": [
             {
@@ -43,7 +43,7 @@
                 "data": [
                     {
                         "name": "\u665a\u4e0a",
-                        "value": 465
+                        "value": 466
                     },
                     {
                         "name": "\u65e9\u4e0a",
@@ -107,6 +107,138 @@
             ]
         },
         "legend": [
+            {
+                "data": [
+                    "\u665a\u4e0a",
+                    "\u4e0a\u5348",
+                    "\u4e0b\u5348",
+                    "\u65e9\u4e0a",
+                    "\u4e2d\u5348"
+                ],
+                "selected": {},
+                "show": true,
+                "orient": "horizontal",
+                "padding": 5,
+                "itemGap": 10,
+                "itemWidth": 25,
+                "itemHeight": 14,
+                "textStyle": {
+                    "color": "white"
+                },
+                "backgroundColor": "transparent",
+                "borderColor": "#ccc",
+                "borderRadius": 0,
+                "pageButtonItemGap": 5,
+                "pageButtonPosition": "end",
+                "pageFormatter": "{current}/{total}",
+                "pageIconColor": "#2f4554",
+                "pageIconInactiveColor": "#aaa",
+                "pageIconSize": 15,
+                "animationDurationUpdate": 800,
+                "selector": false,
+                "selectorPosition": "auto",
+                "selectorItemGap": 7,
+                "selectorButtonGap": 10
+            },
+            {
+                "data": [
+                    "\u4e0a\u5348",
+                    "\u4e0b\u5348",
+                    "\u665a\u4e0a",
+                    "\u65e9\u4e0a",
+                    "\u4e2d\u5348"
+                ],
+                "selected": {},
+                "show": true,
+                "orient": "horizontal",
+                "padding": 5,
+                "itemGap": 10,
+                "itemWidth": 25,
+                "itemHeight": 14,
+                "textStyle": {
+                    "color": "white"
+                },
+                "backgroundColor": "transparent",
+                "borderColor": "#ccc",
+                "borderRadius": 0,
+                "pageButtonItemGap": 5,
+                "pageButtonPosition": "end",
+                "pageFormatter": "{current}/{total}",
+                "pageIconColor": "#2f4554",
+                "pageIconInactiveColor": "#aaa",
+                "pageIconSize": 15,
+                "animationDurationUpdate": 800,
+                "selector": false,
+                "selectorPosition": "auto",
+                "selectorItemGap": 7,
+                "selectorButtonGap": 10
+            },
+            {
+                "data": [
+                    "\u665a\u4e0a",
+                    "\u65e9\u4e0a",
+                    "\u4e0a\u5348",
+                    "\u4e0b\u5348",
+                    "\u4e2d\u5348"
+                ],
+                "selected": {},
+                "show": true,
+                "orient": "horizontal",
+                "padding": 5,
+                "itemGap": 10,
+                "itemWidth": 25,
+                "itemHeight": 14,
+                "textStyle": {
+                    "color": "white"
+                },
+                "backgroundColor": "transparent",
+                "borderColor": "#ccc",
+                "borderRadius": 0,
+                "pageButtonItemGap": 5,
+                "pageButtonPosition": "end",
+                "pageFormatter": "{current}/{total}",
+                "pageIconColor": "#2f4554",
+                "pageIconInactiveColor": "#aaa",
+                "pageIconSize": 15,
+                "animationDurationUpdate": 800,
+                "selector": false,
+                "selectorPosition": "auto",
+                "selectorItemGap": 7,
+                "selectorButtonGap": 10
+            },
+            {
+                "data": [
+                    "\u665a\u4e0a",
+                    "\u65e9\u4e0a",
+                    "\u4e0a\u5348",
+                    "\u4e0b\u5348",
+                    "\u4e2d\u5348"
+                ],
+                "selected": {},
+                "show": true,
+                "orient": "horizontal",
+                "padding": 5,
+                "itemGap": 10,
+                "itemWidth": 25,
+                "itemHeight": 14,
+                "textStyle": {
+                    "color": "white"
+                },
+                "backgroundColor": "transparent",
+                "borderColor": "#ccc",
+                "borderRadius": 0,
+                "pageButtonItemGap": 5,
+                "pageButtonPosition": "end",
+                "pageFormatter": "{current}/{total}",
+                "pageIconColor": "#2f4554",
+                "pageIconInactiveColor": "#aaa",
+                "pageIconSize": 15,
+                "animationDurationUpdate": 800,
+                "selector": false,
+                "selectorPosition": "auto",
+                "selectorItemGap": 7,
+                "selectorButtonGap": 10
+            },
             {
                 "data": [
                     "\u665a\u4e0a",
@@ -675,7 +807,7 @@
                     "data": [
                         {
                             "name": "\u665a\u4e0a",
-                            "value": 465
+                            "value": 466
                         },
                         {
                             "name": "\u65e9\u4e0a",
@@ -770,9 +902,9 @@
         }
     ]
 };
-        chart_3cdccd1530014fb88d17a47aa0f0a8c1.setOption(option_3cdccd1530014fb88d17a47aa0f0a8c1);
+        chart_69fe6bbff9ed440fb23b0cf2271dea21.setOption(option_69fe6bbff9ed440fb23b0cf2271dea21);
             window.addEventListener('resize', function(){
-                chart_3cdccd1530014fb88d17a47aa0f0a8c1.resize();
+                chart_69fe6bbff9ed440fb23b0cf2271dea21.resize();
             })
     </script>
 </body>
